// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game screen correctly works Artist screen renders 1`] = `
<section
  className="game game--artist"
>
  <header
    className="game__header"
  >
    <Connect(WelcomeScreen) />
    <TimerBlock />
    <Connect(MistakesList) />
  </header>
  <WithActivePlayer
    onAnswer={[MockFunction]}
    question={
      Object {
        "answers": Array [
          Object {
            "artist": "Billie Eilish",
            "picture": "/img/default-artist.png",
          },
          Object {
            "artist": "Imagine Dragons",
            "picture": "/img/default-artist.png",
          },
          Object {
            "artist": "Artur Latte",
            "picture": "/img/default-artist.png",
          },
        ],
        "song": Object {},
        "type": "artist",
      }
    }
  />
</section>
`;

exports[`Game screen correctly works Genre screen renders 1`] = `
<section
  className="game game--genre"
>
  <header
    className="game__header"
  >
    <Connect(WelcomeScreen) />
    <TimerBlock />
    <Connect(MistakesList) />
  </header>
  <WithUserAnswers
    onAnswer={[MockFunction]}
    question={
      Object {
        "answers": Array [
          Object {
            "genre": "pop",
            "src": "./tracks/Anivar_Summer.mp3",
          },
          Object {
            "genre": "jazz",
            "src": "./tracks/Billie_Eilish_ilomilo.mp3",
          },
          Object {
            "genre": "rock",
            "src": "./tracks/Cj_L_Black_Rain.mp3",
          },
          Object {
            "genre": "classic",
            "src": "./tracks/Orquesta_L_rica_de_Barcelona_Las_Cuatro_Estaciones,_Invierno_Allegro_Non_Molto.mp3",
          },
        ],
        "genre": "rock",
        "type": "genre",
      }
    }
  />
</section>
`;
